--- a/css/styles.css
+++ b/css/styles.css
@@ -127,9 +127,11 @@ letter-spacing: 0.02em;
     letter-spacing: 0.02em;
 }
 .logo-footer{
-    color: color: #2e2f42;
+    color:#2e2f42;
+    
     
 }
+
 
 
     
