--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,13 @@ img {
     padding: 0 15px;
 
 }
+.first-section-container{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
 
 .header-enav {
     display: flex;
@@ -230,5 +237,18 @@ img {
 
 }
 .li-h {
-    margin-bottom: 8 px;
+    margin-bottom: 8px;
     }
+
+.third-section {
+    padding: 120px 0; 
+}
+
+.ikin {
+    margin-bottom: 72px;
+}
+
+.team-ul {
+    display: flex;
+    gap: 24px;}
+
