--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ letter-spacing: 0.02em;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
 }
 
 .our-team {
@@ -240,15 +241,26 @@ img {
     margin-bottom: 8px;
     }
 
-.third-section {
+.third-sec {
     padding: 120px 0; 
 }
 
-.ikin {
-    margin-bottom: 72px;
+.ikinci.düzenleme {
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px
 }
 
 .team-ul {
-    display: flex;
-    gap: 24px;}
+    list-style-type: none;}
 
+.name-job {
+    padding: 32px 0;
+}
+
+.name-job-h {
+    text-align: center;
+    margin-bottom: 8px;
+}
+.name-job-p {
+    text-align: center;
+}
