--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ img {
 }
 
 .about-li {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4)
 
 }
 .li-h {
@@ -246,12 +246,14 @@ img {
 }
 
 .ikinci.düzenleme {
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px
+    flex-basis: calc((100% - 72px) / 4)
+    border-top-left-radius: 0px; border-top-right-radius: 0px; border-top-right-radius: 4px; border-bottom-left-radius: 4px;
 }
 
 .team-ul {
-    list-style-type: none;}
+    list-style-type: none;
+    display: flex;
+    gap: 24px; }
 
 .name-job {
     padding: 32px 0;
@@ -264,3 +266,4 @@ img {
 .name-job-p {
     text-align: center;
 }
+
